# spherex-lander-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/spherexlander/: __init__.py
src/spherexlander/parsers/: __init__.py  spherexdata.py  spherexparser.py
src/spherexlander/parsers/pipelinemodule/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/projectmanagement/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/ssdcdp/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/ssdcif/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/ssdcop/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/ssdctn/: __init__.py  datamodel.py  parser.py
src/spherexlander/parsers/ssdctr/: __init__.py  datamodel.py  parser.py
src/spherexlander/themes/spherex/: __init__.py  theme.py
src/spherexlander/themes/spherex/site/: index.html.jinja  spherex.css
tests/: init_test.py  test_parser_pipelinemodule.py  test_parser_projectmanagement.py  test_parser_ssdc_tr.py  test_spherex_theme.py  test_themes_spherex_pipelinemodule.py
tests/data/pipeline-module/: .gitignore  Makefile  lander.yaml  main.tex  meta.tex  ssdc-ms-001.tex
tests/data/pm-document/: .gitignore  Makefile  SSDC-PM-001.tex  lander.yaml  meta.tex
tests/data/ssdc-tr-req/: Makefile  SSDC-TR-000.tex  meta.tex
tests/data/ssdc-tr-va/: SSDC-TR-000.tex
