[metadata]
name = spherex-lander-plugin
description = SPHEREx plugin for the Lander PDF landing page tool.
author = J.Sick Codes Inc.
author_email = hi@jsick.codes
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/SPHEREx/spherex-lander-plugin
project_urls =
    Source code = https://github.com/SPHEREx/spherex-lander-plugin
    Issue tracker = https://github.com/SPHEREx/spherex-lander-plugin/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Documentation
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX
    Typing :: Typed
keywords =
    spherex
    lander

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    importlib_metadata; python_version < "3.8"
    lander >= 2.0.0a7
    python-dateutil

[options.packages.find]
where = src

[options.package_data]
spherexlander =
    themes/spherex/templates/*.jinja
    themes/spherex/site/*.js
    themes/spherex/site/*.css
    themes/spherex/site/*.png
    themes/spherex/site/*.jpg
    themes/spherex/site/*.svg
    themes/spherex/site/*.txt
    themes/spherex/site/*.jinja

[options.extras_require]
dev =
    pytest
    coverage[toml]
    beautifulsoup4
    types-python-dateutil

[options.entry_points]
lander.parsers =
    spherex-pipeline-module = spherexlander.parsers.pipelinemodule:SpherexPipelineModuleParser
    spherex-project-management = spherexlander.parsers.projectmanagement:SpherexProjectManagementParser
    spherex-ssdc-if = spherexlander.parsers.ssdcif:SpherexSsdcIfParser
    spherex-ssdc-dp = spherexlander.parsers.ssdcdp:SpherexSsdcDpParser
    spherex-ssdc-tr = spherexlander.parsers.ssdctr:SpherexSsdcTrParser
lander.themes =
    spherex = spherexlander.themes.spherex:SpherexTheme

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503

[tool:pytest]
norecursedirs = node_modules

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
